@@ -211,6 +211,8 @@ server:
 	# Disabled by default, because some caching forwarders may not
 	# support this (if you have forward-zones). Most authority servers do.
 	# This feature is an experimental implementation of draft dns-0x20.
+	# It is known that some authority servers do not support 0x20, and
+	# resolution will fail for them. A solution is on the TODO list.
 	# use-caps-for-id: no
 	
 	# Do not query the following addresses. No DNS queries are sent there.
